# DevOps-MiniTwit

./: .gitignore  Dockerfile  Minitwit_Deployment_View.uxf  README.md  SLA.md  control.sh  minitwit.py  pyproject.toml  work_log.txt
docs/: CONTRIBUTE.md  (+1 more)
refactor_fastapi/: main.py  minitwit.db  pyproject.toml  requirements.txt
refactor_fastapi/database/: __init__.py  connection.py  db_util.py  dml.py
refactor_fastapi/routers/: auth.py  pages.py  timelines.py  users.py
refactor_fastapi/tests/new_tests/endpoint_tests/: minitwit_tests.py
refactor_fastapi/tests/old/: minitwit_tests.py
refactor_fastapi/util/: middleware.py  util.py
src/backend/: .dockerignore  .env  .env_sample  Dockerfile  DockerfileTLS  main.py  main_test.py  pyproject.toml  requirements.txt
src/backend/alembic/: alembic.ini
src/backend/alembic/alembic/: env.py
src/backend/alembic/alembic-env/: pyvenv.cfg
src/backend/database/: __init__.py  db_orm.py  db_util.py  initialize_db.py  models.py
src/backend/routers/: __init__.py  auth.py  pages.py  simulation_mapper.py  timelines.py  users.py
src/backend/styles/: style.css
src/backend/templates/: layout.html  login.html  register.html  timeline.html
src/backend/tests/: exception_test.py  minitwit_old_test.py  sim_api_test.py
src/backend/tmp/: hosts  minitwit.db
src/backend/util/: __init__.py  app_logger.py  app_logger_formatter.py  custom_exceptions.py  log_config.py  middleware.py  prometheus_util.py  redis_util.py  util.py
src/end_to_end/: Dockerfile  pyproject.toml  requirements.txt  test_itu_minitwit_ui.py  test_selenium.py
(+63 files in other folders)
