[tool.poetry]
name = "refactor-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "refactor_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
