[tool.poetry]
name = "end-to-end"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]
readme = "README.md"
packages = [{include = "end_to_end"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
